# tessera-vq

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  config.yaml  conftest.py  pyproject.toml
.github/ISSUE_TEMPLATE/: phase.md
.github/workflows/: ci.yml
config/: canonical_bboxes.yaml
docs/: bolt_on_availability_plan.md  deployment_options.mmd  integration.md  paper_vq_compression.tex  research_plan_downstream_validation.md  spec.md  tech_note_vq_compression.md  tee-integration.md
notebooks/: 01_isotropy.ipynb  02_reconstruction.ipynb  03_index_compression.ipynb  04_downstream.ipynb  05_pareto.ipynb
scripts/: codebook_rank_analysis.py  phase1_isotropy.py  phase2_reconstruction.py  phase3_gzip_vs_rle.py  phase3_index_compression.py  phase3_large_recon_sweep.py  phase3_rvq_sweep.py  phase4_downstream.py  phase4_pareto.py  phase5_pareto.py
tessera_vq/: __init__.py  canonical.py  client.py  codebook_codec.py  data.py  downstream.py  effrank.py  entropy.py  hilbert.py  index_codec.py  io_utils.py  kmeans_fast.py  metrics.py  morton.py  phase3_sweep.py  probes.py  quantize.py  rvq_large.py  server.py  sweep.py  tile_cache.py  tiling.py  zarr_utils.py
tests/: test_canonical.py  test_client.py  test_codebook_codec.py  test_downstream.py  test_effrank.py  test_hilbert.py  test_index_compression.py  test_index_compression_sweep.py  test_kmeans_fast.py  test_large_recon_sweep.py  test_metrics.py  test_morton.py  test_phase3_sweep.py  test_phase4_downstream.py  test_quantize.py  test_recon_metrics.py  test_server.py  test_sweep.py  test_tile_cache.py  test_tiling.py
