[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera-vq"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "pyarrow>=17",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "zstandard>=0.22",
    "hilbertcurve>=2.0",
    "pymorton>=1.0",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "rasterio>=1.3",
    "xarray>=2024.6",
    "geotessera>=0.8",
    "torch>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "jupyterlab>=4.2",
    "quarto-cli>=1.5",
]

# Explicit package declaration: the repo uses a flat layout with output dirs
# (results/, figures/, logs/, notebooks/) that would otherwise confuse setuptools
# auto-discovery. Only tessera_vq is an importable package.
[tool.setuptools]
packages = ["tessera_vq"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET", "PL"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tessera_vq --cov-report=term-missing"
