[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera-vq"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "pyarrow>=17",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "zstandard>=0.22",
    "hilbertcurve>=2.0",
    "pymorton>=1.0",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "rasterio>=1.3",
    "xarray>=2024.6",
    "affine>=2.4",
    "geotessera>=0.8",
    "torch>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "jupyterlab>=4.2",
    "quarto-cli>=1.5",
]
# Interactive (t, K, m) sweep bolt-on. Runs LAN-close to the embeddings store.
server = [
    "flask>=3.0",
    "waitress>=3.0",
]

# Explicit package declaration: the repo uses a flat layout with output dirs
# (results/, figures/, logs/, notebooks/) that would otherwise confuse setuptools
# auto-discovery. Only tessera_vq is an importable package.
[tool.setuptools]
packages = ["tessera_vq"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Vendored verbatim from ucam-eo/tee; kept identical to upstream.
extend-exclude = ["tessera_vq/zarr_utils.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET", "PL"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately compare against literal thresholds.
"tests/**" = ["PLR2004"]

[tool.ruff.lint.pylint]
# Data-loader / sweep functions take several explicit knobs (window, year, seed, ...).
max-args = 8

[tool.mypy]
strict = true
ignore_missing_imports = true
# Avoid version-skew issues between local mypy and the pre-commit mypy hook;
# `[server]` extras aren't installed in CI's mypy env, so per-line ignores look
# "unused" there but are needed under [server].
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tessera_vq --cov-report=term-missing"
