[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera-vq"
version = "0.5.2"
description = "Per-tile vector quantisation of Tessera embeddings: library, optional server, plug-compatible client."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "S. Keshav"}]
requires-python = ">=3.12"
# Minimal core — only what tessera_vq.client and the public dataclasses need.
# Everything heavier (k-means, tile fetching, sweep analysis) is gated behind
# optional-dependencies extras below so downstream consumers like TEE that
# only use the client don't pay for it.
dependencies = [
    "numpy>=1.26",
    "affine>=2.4",
]

[project.optional-dependencies]
# Bolt-on server: Flask + k-means + tile fetching via geotessera/zarr.
# Install with `pip install "tessera-vq[server]"` on the host that runs
# tessera_vq.server (the systemd unit on michael).
server = [
    "flask>=3.0",
    "waitress>=3.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "joblib>=1.4",
    "rasterio>=1.3",
    "geotessera>=0.8",
]
# Large-scale parameter sweeps + analysis (tessera_vq.sweep, UK isotropy
# scripts, parquet-with-provenance outputs). Pulls server bits transitively.
sweep = [
    "tessera-vq[server]",
    "pandas>=2.2",
    "pyarrow>=17",
    "pyyaml>=6.0",
    "hilbertcurve>=2.0",
    "pymorton>=1.0",
]
# Dev / CI / notebooks — full surface plus tooling.
dev = [
    "tessera-vq[server,sweep]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "jupyterlab>=4.2",
    "quarto-cli>=1.5",
]
# Removed in 0.3.2 — declared in 0.3.1 but never imported in tessera_vq/:
#   torch, matplotlib, seaborn, tqdm, xarray, zstandard.
# zstandard appears only in an entropy.py Phase 0 stub docstring; re-declare
# under [server] (or a new [entropy] extra) when the stub is implemented.

# Explicit package declaration: the repo uses a flat layout with output dirs
# (results/, figures/, logs/, notebooks/) that would otherwise confuse setuptools
# auto-discovery. Only tessera_vq is an importable package.
[tool.setuptools]
packages = ["tessera_vq"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Vendored verbatim from ucam-eo/tee; kept identical to upstream.
extend-exclude = ["tessera_vq/zarr_utils.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET", "PL"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately compare against literal thresholds.
"tests/**" = ["PLR2004"]

[tool.ruff.lint.pylint]
# Data-loader / sweep functions take several explicit knobs (window, year, seed, ...).
max-args = 8

[tool.mypy]
strict = true
ignore_missing_imports = true
# Avoid version-skew issues between local mypy and the pre-commit mypy hook;
# `[server]` extras aren't installed in CI's mypy env, so per-line ignores look
# "unused" there but are needed under [server].
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tessera_vq --cov-report=term-missing"
